inserimento div e classi

--- a/index.html
+++ b/index.html
@@ -16,6 +16,20 @@
 
 <body>
 
+    <h1>Simon Says:</h1>
+
+    <!--numeri random-->
+
+    <div class="random"></div>
+
+    <!--timer 5 secondi-->
+
+    <div class="timer"></div>
+
+    <!--numeri indovinati-->
+
+    <div class="indovinati"></div>
+
     <script src="script.js"></script>
     
 </body>
